改完一些bug